--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title>RPS!</title>
+
+    <!-- You should generally place all of your script tags at the bottom of your html body -->
+
     <!-- jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
